kube/jelly/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jelly
  labels:
    name: jelly
