kube/jelly/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: jelly
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "bazarr.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port :
                  number: 6767
    - host: "jellyfin.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port :
                  number: 8096
    - host: "jellyseerr.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port :
                  number: 5055
    - host: "kavita.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kavita
                port :
                  number: 5000
    - host: "nzbget.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nzbget
                port :
                  number: 6789
    - host: "prowlarr.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port :
                  number: 9696
    - host: "qbittorrent.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port :
                  number: 8080
    - host: "radarr.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port :
                  number: 7878
    - host: "readarr.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: readarr
                port :
                  number: 8787
    - host: "sonarr.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port :
                  number: 8989
    - host: "lidarr.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port :
                  number: 8686
    - host: "flaresolverr.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr
                port :
                  number: 8191
    - host: "tdarr.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdarr
                port :
                  number: 8265
    - host: "tdarr-node.kube.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdarr
                port :
                  number: 8266
